--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-app/__pycache__/main.cpython-313.pyc
-app/interfaces/routes/__pycache__/products.cpython-313.pyc
+app/__pycache__
+app/interfaces/routes/__pycache__
 .env
 app/__pycache__/main.cpython-311.pyc
 .gitignore
 app/interfaces/routes/__pycache__/products.cpython-311.pyc
 README.md
+
+.idea
