--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
 click==8.1.8
@@ -5,8 +6,11 @@ fastapi==0.115.12
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
 numpy==2.2.5
 pandas==2.2.3
+psycopg2-binary==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
@@ -16,6 +20,7 @@ pytz==2025.2
 PyYAML==6.0.2
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.40
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
