feat[products]: added new tables with migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: dashboard-backend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ./app:/app/app
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
